my first commit

--- a/pastries.html
+++ b/pastries.html
@@ -23,6 +23,7 @@
 <div>
 
     <!-- The Pastries page Header/ paragraphs -->
+    <!-- <h4 id="pastries_page"> Bites with Brew</h4> -->
     <h4 id="pastries_page"> Bites with Brew</h4>
     <!-- Adding my varieties of pastries -->    
 <div class="img-container-pastries">
@@ -52,9 +53,9 @@
     <p>£1.80</p>
     </div>
 </div>
+    <!-- <h4 id="pastries_page"> Bites with Brew</h4> -->
 <p>“Bites with Brew” brings together the finest pastries and confections, crafted with precision and passion by our skilled pastry chefs. Indulgence takes a new form at our Pastry Section. Freshly baked croissants with layers that crumble like whispers, decadent pastries that beckon you with their artistry, and flaky Danish pastries that melt in your mouth-our pastry chefs infuse each creation with a touch of magic.<br><br> It is an invitation to take your coffee experience to a new height. Sip your brew, savour the intricate notes, and let the carefully crafted pastries enhance your journey. With each bite, you will find that the flavours intertwine, creating a sensory experience that is greater than the sum of its parts. In this section, we identify our menu as follows:<br><br>*Bread: The comfort of freshly baked bread, a timeless companion to your favourite brew.<br><br>*Cookies: A sweet dance of textures and taste, perfect for a quick treat.<br><br>*Cinnamon Roll: A swirl of fragrant cinnamon and buttery layers that melt in your mouth.<br><br>*Pain au Chocolat: A French classic, where buttery, flaky layers embrace the richness of chocolate.<br><br>*Croissants: Delicate and golden, a masterpiece of pastry craftsmanship.<br><br> Whether you are meeting a friend for a leisure afternoon or grabbing a quick on the go, this section is designed to satisfy every craving 
     
-
 <div class="social-media">
     <a href="https://www.facebook.com/" class="fa fa-facebook"></a>
     <a href="https://www.twitter.com/" class="fa fa-twitter"></a>
