--- a/contactus.html
+++ b/contactus.html
@@ -12,19 +12,16 @@
 
 </head>
 <body>
-    
-</body>
-</html>
 
 
 <div class="navbar">
     <a href="./index.html"> Home </a>
-    <a href="./drinks.html"> Drinks</a>
+    <a href="./drinks.html"> Drinks </a>
     <a href="./pastries.html"> Pastries </a>
-    <a href="contactus.html"> ContactUs</a>
+    <a href="contactus.html"> Contact Us</a>
 <div>
 
-
+<h2> Contact Us Form</h2>
 <div class="container">
     <form action="action_page.php">
   
@@ -55,3 +52,6 @@
       <a href="https://twitter.com/" class="fa fa-twitter"></a>
       
 </div>
+
+</body>
+</html>
