--- a/index.html
+++ b/index.html
@@ -22,18 +22,20 @@
 
 <div class="navbar">
     <a href="./index.html"> Home </a>
-    <a href="./drinks.html"> Drinks</a>
+    <a href="./drinks.html"> Drinks </a>
     <a href="./pastries.html"> Pastries </a>
-    <a href="contactus.html"> ContactUs</a>
+    <a href="contactus.html"> Contact Us </a>
 <div>
     <h1>Welcome to Coffee Heaven!</h1>
     <!-- <h2>Header 2</h2> -->
     <!-- The coffee bar -->
     <h2 id="coffebar"> Our Exquisite Coffee Bar</h2>
     <!--Add my coffee bar image  -->
-    <img src="./website_pictures/coffee_bar.webp" alt="Coffee-Bar">
+    <div class="coffee-bar">
+        <img src="./website_pictures/coffee_bar.webp" alt="Coffee-Bar" > 
+    </div>
 
-<p> About Coffee Heaven</p>
+<h3> About Coffee Heaven</h3>
 <p>At Coffee Heaven, we invite you to embark on a sensory journey that celebrates the art and science of coffee. Nested in the heart of the city, Coffee Heaven is more than just a coffee shop; it is a haven where rich aroma of freshly brewed beans intertwines with the warmth of community and the joy of exploration. While Coffee Heaven is a local gem, we extend our arms to embrace the world. Our menu takes inspiration from various coffee cultures, ensuring that your taste buds embark on a global adventure with every order. It is a place where residents gather for their morning rituals, tourists find a slice authenticity, and for coffee enthusiasts it is a place of pilgrimage.<br><br> Beyond the coffee and pastries, Coffee Heaven is a meeting ground for kindred spirits. It's where friendships are forged over shared stories, where ideas flow as freely as the coffee, and where the aroma of beans creates an ambiance of comfort and creativity. Whether you are seeking solitude with a book or lively conversation with friends, our space accommodates every mood. Coffee Heaven is not just a place, it is an experience waiting to be lived.<br><br> If you are a resident seeking a new coffee haven, a tourist in search of an authentic local gem, or a coffee enthusiast eager to explore and learn, we invite you to step into our world, where you can engage in conversations with our knowledgeable staffs, who are more than happy to share their insights and recommendations, whether you are new to coffee or a seasoned expert. 
 
 <div class="social-media">
