--- a/drinks.html
+++ b/drinks.html
@@ -20,10 +20,10 @@
         <a href="./pastries.html"> Pastries</a>
         <a href="./contactus.html"> ContactUs </a>
 <div>
-
+        <h3 id="drinks_page"> Roastopia</h3>
+<p><br><br> At Coffee Heaven, we invite you to step into the world of exquisite flavours, comforting aromas, and a warn ambiance that embraces both local community and those who are seeking a delightful coffee experience. Our website is a digital gateway to this haven, sectionalised into: “Roastopia” and “Bite and Brew”.<br><br> “Rostopia” combines the name 'roast', referring to the process of coffee bean roasting and, 'utopia', evoking a sense of a perfect coffee world.  Our expert roasters meticulously curate beans from diverse regions, each boasting its unique terroir. This section celebrates the art and science of coffee creation from light to dark roasts, every bean embarks on a journey that highlights its inherent attributes, resulting in a spectrum of taste that cater to every taste.<br><br> Embark on a voyage through our curated menu, where each coffee offering is a testament to the skill of our roasters and the diversity of the coffee world. Each cup is a masterpiece that tells a story of carefully selected beans, expertly roasted to perfection, and brewed with passion. The menu boasts of an array of tantalising options.<br><br></p>      
     <!--The Drinks page Header/ paragraphs  -->
     <!-- Adding my varieties of coffee -->
-        <h3 id="drinks_page"> Roastopia</h3>
         <div class="img-container">
         <div class="img-links">
         <img src="./website_pictures/cxpresso.webp" class="img-links" alt="Espresso">
@@ -47,7 +47,7 @@
         </div>
 </div>
 
-<p>At Coffee Heaven, we invite you to step into the world of exquisite flavours, comforting aromas, and a warn ambiance that embraces both local community and those who are seeking a delightful coffee experience. Our website is a digital gateway to this haven, sectionalised into: “Roastopia” and “Bite and Brew”.<br><br> “Rostopia” combines the name 'roast', referring to the process of coffee bean roasting and, 'utopia', evoking a sense of a perfect coffee world.  Our expert roasters meticulously curate beans from diverse regions, each boasting its unique terroir. This section celebrates the art and science of coffee creation from light to dark roasts, every bean embarks on a journey that highlights its inherent attributes, resulting in a spectrum of taste that cater to every taste.<br><br> Embark on a voyage through our curated menu, where each coffee offering is a testament to the skill of our roasters and the diversity of the coffee world. Each cup is a masterpiece that tells a story of carefully selected beans, expertly roasted to perfection, and brewed with passion. The menu boasts of an array of tantalising options.<br><br><br><br>*Espresso: The heart and soul of coffee, capturing the essence of rich, concentrated flavour.<br><br>*Latte: The harmonious blend of velvety milk and expresso, a comforting companion to your day.<br><br>*Matcha and Beetroot Latte: For those who seek unique experiences, these vibrant concoctions area fusion of health and taste.<br><br>*Iced Coffee: A refreshing twist on tradition, perfect for cooling off on warm days.<br><br> Coffee enthusiast, residents, and tourist alike will find a coffee haven here that exceeds expectations.<br><br>
+<p><br>*Espresso: The heart and soul of coffee, capturing the essence of rich, concentrated flavour.<br><br>*Latte: The harmonious blend of velvety milk and expresso, a comforting companion to your day.<br><br>*Matcha and Beetroot Latte: For those who seek unique experiences, these vibrant concoctions area fusion of health and taste.<br><br>*Iced Coffee: A refreshing twist on tradition, perfect for cooling off on warm days.<br><br> Coffee enthusiast, residents, and tourist alike will find a coffee haven here that exceeds expectations.<br><br>
      
 <div class="social-media">   
         <a href="https://facebook.com/" class="fa fa-facebook"></a>
